# IsomGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile
.github/workflows/: c-cpp.yml
include/: Game.h  IScene.h  KeysEnum.h  Map.h  PointerList.h  Punkt.h  Renderer.h  ResourceManager.h  Sprite.h  Str.h  UserInput.h  Vec2D.h  mapout.h  pch.h  utilities.h
include/engine/: Drawables.h  Font.h  Game.h  IScene.h  Renderer.h  Window.h  structs.h
old_reference_source/include/: Map.h  pch.h
old_reference_source/include/engine/: Event.h  Game.h  KeysEnum.h  Layer.h  Platform.h  Renderer.h  Window.h  structs.h
old_reference_source/src/: Map.cpp  main.cpp
old_reference_source/src/engine/: Game.cpp  glad.hpp
old_reference_source/src/engine/win32/: DirectX.cpp  DirectX.h  PlatformWin32.cpp  Window.h
src/: Game.cpp  Map.cpp  OpenCastle.cpp  OpenCastle.h  Pause.h  Renderer.cpp  Sprite.cpp  main.cpp
src/engine/: Font.cpp  Game.cpp  glad.hpp  schrift.c  schrift.h  stb.c
src/engine/win32/: OpenGL.cpp  OpenGL.h  PlatformWin32.cpp  Window.h
